{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 57,
  "lineage": "db66a400-84a5-9101-096a-c5fbdf37e7fa",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public-lb-ip-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.72.1.94",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-24T08:42:36.730-07:00",
            "id": "projects/gke-test-412223/regions/us-central1/addresses/kubernetes-the-hard-way-public-lb-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "kubernetes-the-hard-way-public-lb-ip-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "gke-test-412223",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-central1/addresses/kubernetes-the-hard-way-public-lb-ip-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-external-firewall-controllers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-03-24T08:20:47.789-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gke-test-412223/global/firewalls/kubernetes-the-hard-way-vpc-external-firewall-controllers",
            "log_config": [],
            "name": "kubernetes-the-hard-way-vpc-external-firewall-controllers",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-controllers",
            "priority": 1000,
            "project": "gke-test-412223",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/firewalls/kubernetes-the-hard-way-vpc-external-firewall-controllers",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-controllers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-external-firewall-workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-03-24T08:20:37.071-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gke-test-412223/global/firewalls/kubernetes-the-hard-way-vpc-external-firewall-workers",
            "log_config": [],
            "name": "kubernetes-the-hard-way-vpc-external-firewall-workers",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-workers",
            "priority": 1000,
            "project": "gke-test-412223",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/firewalls/kubernetes-the-hard-way-vpc-external-firewall-workers",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-internal-firewall-controllers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-03-24T08:20:48.677-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gke-test-412223/global/firewalls/kubernetes-the-hard-way-vpc-internal-firewall-controllers",
            "log_config": [],
            "name": "kubernetes-the-hard-way-vpc-internal-firewall-controllers",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-controllers",
            "priority": 1000,
            "project": "gke-test-412223",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/firewalls/kubernetes-the-hard-way-vpc-internal-firewall-controllers",
            "source_ranges": [
              "10.240.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-controllers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-internal-firewall-workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-03-24T08:20:37.335-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gke-test-412223/global/firewalls/kubernetes-the-hard-way-vpc-internal-firewall-workers",
            "log_config": [],
            "name": "kubernetes-the-hard-way-vpc-internal-firewall-workers",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-workers",
            "priority": 1000,
            "project": "gke-test-412223",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/firewalls/kubernetes-the-hard-way-vpc-internal-firewall-workers",
            "source_ranges": [
              "10.250.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "controllers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-central1-a/disks/controller-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gke-test-412223/zones/us-central1-a/instances/controller-0",
            "instance_id": "8918902658743269899",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "-LpGhTAMoC0=",
            "name": "controller-0",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-controllers",
                "network_ip": "10.240.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-central1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-controllers",
                "subnetwork_project": "gke-test-412223"
              }
            ],
            "project": "gke-test-412223",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-central1-a/instances/controller-0",
            "service_account": [
              {
                "email": "458208042367-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller",
              "kubernetes-the-hard-way"
            ],
            "tags_fingerprint": "VcbEPNUNsEE=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-controllers",
            "google_compute_subnetwork.vpc-subnet-controllers"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-central1-a/disks/controller-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gke-test-412223/zones/us-central1-a/instances/controller-1",
            "instance_id": "8924211096587205130",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "-LpGhTAMoC0=",
            "name": "controller-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-controllers",
                "network_ip": "10.240.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-central1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-controllers",
                "subnetwork_project": "gke-test-412223"
              }
            ],
            "project": "gke-test-412223",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-central1-a/instances/controller-1",
            "service_account": [
              {
                "email": "458208042367-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller",
              "kubernetes-the-hard-way"
            ],
            "tags_fingerprint": "VcbEPNUNsEE=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-controllers",
            "google_compute_subnetwork.vpc-subnet-controllers"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-central1-a/disks/controller-2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gke-test-412223/zones/us-central1-a/instances/controller-2",
            "instance_id": "1710894607642786316",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "-LpGhTAMoC0=",
            "name": "controller-2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-controllers",
                "network_ip": "10.240.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-central1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-controllers",
                "subnetwork_project": "gke-test-412223"
              }
            ],
            "project": "gke-test-412223",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-central1-a/instances/controller-2",
            "service_account": [
              {
                "email": "458208042367-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller",
              "kubernetes-the-hard-way"
            ],
            "tags_fingerprint": "VcbEPNUNsEE=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-controllers",
            "google_compute_subnetwork.vpc-subnet-controllers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-east1-b/disks/worker-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gke-test-412223/zones/us-east1-b/instances/worker-0",
            "instance_id": "6916808884983036470",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "pod-cidr": "10.250.0.0/24"
            },
            "metadata_fingerprint": "-erxa95sKXA=",
            "name": "worker-0",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-workers",
                "network_ip": "10.250.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-east1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-workers",
                "subnetwork_project": "gke-test-412223"
              }
            ],
            "project": "gke-test-412223",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-east1-b/instances/worker-0",
            "service_account": [
              {
                "email": "458208042367-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes-the-hard-way",
              "worker"
            ],
            "tags_fingerprint": "XLAXZqGnY8k=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc-workers",
            "google_compute_subnetwork.vpc-subnet-workers"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-east1-b/disks/worker-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gke-test-412223/zones/us-east1-b/instances/worker-1",
            "instance_id": "5858305639308982839",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "pod-cidr": "10.250.1.0/24"
            },
            "metadata_fingerprint": "56c8Zu9jg1A=",
            "name": "worker-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-workers",
                "network_ip": "10.250.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-east1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-workers",
                "subnetwork_project": "gke-test-412223"
              }
            ],
            "project": "gke-test-412223",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-east1-b/instances/worker-1",
            "service_account": [
              {
                "email": "458208042367-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes-the-hard-way",
              "worker"
            ],
            "tags_fingerprint": "XLAXZqGnY8k=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc-workers",
            "google_compute_subnetwork.vpc-subnet-workers"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-east1-b/disks/worker-2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gke-test-412223/zones/us-east1-b/instances/worker-2",
            "instance_id": "1672956306818726455",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "pod-cidr": "10.250.2.0/24"
            },
            "metadata_fingerprint": "yAWvUGwWrac=",
            "name": "worker-2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-workers",
                "network_ip": "10.250.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-east1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-workers",
                "subnetwork_project": "gke-test-412223"
              }
            ],
            "project": "gke-test-412223",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/zones/us-east1-b/instances/worker-2",
            "service_account": [
              {
                "email": "458208042367-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes-the-hard-way",
              "worker"
            ],
            "tags_fingerprint": "XLAXZqGnY8k=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc-workers",
            "google_compute_subnetwork.vpc-subnet-workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-controllers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-controllers",
            "mtu": 0,
            "name": "kubernetes-the-hard-way-vpc-controllers",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "992806514184813145",
            "project": "gke-test-412223",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-controllers"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-test",
            "mtu": 0,
            "name": "kubernetes-the-hard-way-vpc-test",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8669972354336418294",
            "project": "gke-test-412223",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-test"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-workers",
            "mtu": 0,
            "name": "kubernetes-the-hard-way-vpc-workers",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7021954112500398682",
            "project": "gke-test-412223",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-workers"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc-subnet-controllers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-24T08:20:48.704-07:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/gke-test-412223/regions/us-central1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-controllers",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "kubernetes-the-hard-way-vpc-subnetwork-controllers",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-controllers",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gke-test-412223",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-central1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-controllers",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-controllers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc-subnet-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-24T09:39:04.884-07:00",
            "gateway_address": "10.250.0.1",
            "id": "projects/gke-test-412223/regions/us-west1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-test",
            "ip_cidr_range": "10.250.0.0/24",
            "name": "kubernetes-the-hard-way-vpc-subnetwork-test",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-test",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gke-test-412223",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-west1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-test",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc-subnet-workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-24T08:20:38.032-07:00",
            "gateway_address": "10.250.0.1",
            "id": "projects/gke-test-412223/regions/us-east1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-workers",
            "ip_cidr_range": "10.250.0.0/24",
            "name": "kubernetes-the-hard-way-vpc-subnetwork-workers",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/global/networks/kubernetes-the-hard-way-vpc-workers",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gke-test-412223",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-test-412223/regions/us-east1/subnetworks/kubernetes-the-hard-way-vpc-subnetwork-workers",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-workers"
          ]
        }
      ]
    }
  ]
}